--- a/088.Nested Toggle Button/index.html
+++ b/088.Nested Toggle Button/index.html
@@ -15,8 +15,6 @@
     <section class="toggle">
       <form class="toggle__form" id="tierForm">
         <section class="toggle__track">
-          <div class="toggle__indicator"></div>
-
           <input
             class="toggle__input sr-only"
             type="radio"
@@ -25,8 +23,6 @@
             value="free"
             checked
           />
-          <label class="toggle__label" for="free">Free</label>
-
           <input
             class="toggle__input sr-only"
             type="radio"
@@ -42,6 +38,10 @@
             value="year"
           />
 
+          <div class="toggle__indicator"></div>
+
+          <label class="toggle__label" for="free">Free</label>
+          <label class="toggle__label" for="premium">Premium</label>
 
           <div class="toggle__premium">
             <div class="toggle__premium-indicator"></div>
