--- a/091.Image Comparison Slider/index.html
+++ b/091.Image Comparison Slider/index.html
@@ -14,17 +14,16 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <main>
-    <div class="container">
+    <section class="slider-container">
       <div class="image-container">
         <img
           class="image-before slider-image"
-         src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+         src="https://images.unsplash.com/photo-1592114714621-ccc6cacad26b?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="color photo"
         />
         <img
           class="image-after slider-image"
-          src="https://images.unsplash.com/photo-1464822759023-fed622ff2c3b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+          src="https://images.unsplash.com/photo-1592114714621-ccc6cacad26b?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="black and white"
         />
       </div>
@@ -98,7 +97,6 @@
           ></polyline>
         </svg>
       </div>
-    </div>
-  </main>
+    </section>
 </body>
 </html>
