refactor(#91): rename slider class to slider-input for consistency

--- a/091.Image Comparison Slider/index.html
+++ b/091.Image Comparison Slider/index.html
@@ -34,7 +34,7 @@
         max="100"
         value="50"
         aria-label="Percentage of before photo shown"
-        class="slider"
+        class="slider-input"
       />
       <div class="slider-line" aria-hidden="true"></div>
       <div class="slider-button" aria-hidden="true">
