chores(#90): remove unnecessary blank line in HTML head section

--- a/090.Image On Error Placeholder CSS Only/index.html
+++ b/090.Image On Error Placeholder CSS Only/index.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #090: Image On Error Placeholder  2</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #090: Image On Error Placeholder 2</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
-</head>
-<body>
-  <main>
-    <section>
-      <h1>The Bún Bò</h1>
-      <p>Bun bo Hue noodles is a beloved Vietnamese dish that has captured the hearts and taste buds of food enthusiasts worldwide. Hailing from the city of Hue, nestled in the central region of Vietnam, this flavorful and aromatic soup is an absolute delight for culinary adventurers. With its rich history, diverse ingredients, and distinctive blend of flavors, bun bo Hue noodles offer a gastronomic experience that is second to none.</p>
-     <img src="error_url" alt="Bún Bò Thumbnail">
-     <img src="./image.webp" alt="Bún Bò" class="aside-image">
-      <p>At the heart of bun bo Hue noodles lies a fragrant broth, simmered to perfection with a medley of spices, herbs, and tender beef. The dish typically features rice vermicelli noodles, which are served alongside an array of fresh vegetables, herbs, and lime wedges. The combination of flavors and textures creates a harmonious balance that is both satisfying and refreshing.</p>
-      <p>Whether enjoyed as a comforting meal on a rainy day or as a vibrant dish at a bustling street food stall, bun bo Hue noodles continue to be a symbol of Vietnamese culinary heritage. Its popularity has transcended borders, making it a must-try for anyone seeking an authentic taste of Vietnam.</p>
-
-    </section>
-  </main>
-</body>
+  </head>
+  <body>
+    <main>
+      <section>
+        <h1>The Bún Bò</h1>
+        <p>
+          Bun bo Hue noodles is a beloved Vietnamese dish that has captured the
+          hearts and taste buds of food enthusiasts worldwide. Hailing from the
+          city of Hue, nestled in the central region of Vietnam, this flavorful
+          and aromatic soup is an absolute delight for culinary adventurers.
+          With its rich history, diverse ingredients, and distinctive blend of
+          flavors, bun bo Hue noodles offer a gastronomic experience that is
+          second to none.
+        </p>
+        <img src="error_url" alt="Bún Bò Thumbnail" />
+        <img src="./image.webp" alt="Bún Bò" class="aside-image" />
+        <p>
+          At the heart of bun bo Hue noodles lies a fragrant broth, simmered to
+          perfection with a medley of spices, herbs, and tender beef. The dish
+          typically features rice vermicelli noodles, which are served alongside
+          an array of fresh vegetables, herbs, and lime wedges. The combination
+          of flavors and textures creates a harmonious balance that is both
+          satisfying and refreshing.
+        </p>
+        <p>
+          Whether enjoyed as a comforting meal on a rainy day or as a vibrant
+          dish at a bustling street food stall, bun bo Hue noodles continue to
+          be a symbol of Vietnamese culinary heritage. Its popularity has
+          transcended borders, making it a must-try for anyone seeking an
+          authentic taste of Vietnam.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
