--- a/091.Horizontal Image Comparison Slider/index.html
+++ b/091.Horizontal Image Comparison Slider/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #091: Simple Before After Slider</title>
+  <title>Day #091a: Horizontal Image Comparison Slider</title>
   <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
