fix(#91 #92): fix svg icon in slider

--- a/091.Horizontal Image Comparison Slider/index.html
+++ b/091.Horizontal Image Comparison Slider/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #091a: Horizontal Image Comparison Slider</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #091a: Horizontal Image Comparison Slider</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  <script src="script.js" defer></script>
-</head>
-<body>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
     <section class="slider-container">
       <div class="image-container">
         <img
           class="image-before slider-image"
-         src="https://images.unsplash.com/photo-1592114714621-ccc6cacad26b?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          src="https://images.unsplash.com/photo-1592114714621-ccc6cacad26b?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
           alt="color photo"
         />
         <img
@@ -39,64 +39,29 @@
       <div class="slider-line" aria-hidden="true"></div>
       <div class="slider-button" aria-hidden="true">
         <svg
+        width="30"
+        height="30"
+        fill="currentColor"
           xmlns="http://www.w3.org/2000/svg"
-          width="30"
-          height="30"
-          fill="currentColor"
-          viewBox="0 0 256 256"
+          viewBox="0 0 24 24"
         >
-          <rect width="256" height="256" fill="none"></rect>
-          <line
-            x1="128"
-            y1="40"
-            x2="128"
-            y2="216"
-            fill="none"
-            stroke="currentColor"
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke-width="16"
-          ></line>
-          <line
-            x1="96"
-            y1="128"
-            x2="16"
-            y2="128"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"
-          ></line>
-          <polyline
-            points="48 160 16 128 48 96"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"
-          ></polyline>
-          <line
-            x1="160"
-            y1="128"
-            x2="240"
-            y2="128"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"
-          ></line>
-          <polyline
-            points="208 96 240 128 208 160"
-            fill="none"
-            stroke="currentColor"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            stroke-width="16"
-          ></polyline>
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              d="M14 5V19M5 14L3 12L5 10M19 14L21 12L19 10M10 5L10 19"
+              stroke="#000000"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            ></path>
+          </g>
         </svg>
       </div>
     </section>
-</body>
+  </body>
 </html>
