--- a/003.Hover The Odds or Even Text/index.html
+++ b/003.Hover The Odds or Even Text/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styles.css" />
-		<title>Day #3: Hover Animation w/ the Line-through Odds Characters</title>
+		<title>Day #3: Hover Animation w/ the line-through Odds Characters</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -13,10 +13,10 @@
 		/>
 	</head>
 	<body>
-		<div class="wrap">
-			<span class="text">
+		<main class="wrap">
+			<span class="text-animation">
 				<span>H</span><span>o</span><span>v</span><span>e</span><span>r</span>
 			</span>
-		</div>
+		</main>
 	</body>
 </html>
