fix(#40): add alt text to avatar images for accessibility

--- a/040.Stack Avatars CSS only/index.html
+++ b/040.Stack Avatars CSS only/index.html
@@ -9,19 +9,19 @@
   <body>
     <section class="avatar__stack">
       <a href="#"
-        ><img class="avatar" src="http://i.pravatar.cc/100" alt=""
+        ><img class="avatar" src="http://i.pravatar.cc/100" alt="avatar"
       /></a>
       <a href="#"
-        ><img class="avatar" src="http://i.pravatar.cc/101" alt=""
+        ><img class="avatar" src="http://i.pravatar.cc/101" alt="avatar"
       /></a>
       <a href="#"
-        ><img class="avatar" src="http://i.pravatar.cc/102" alt=""
+        ><img class="avatar" src="http://i.pravatar.cc/102" alt="avatar"
       /></a>
       <a href="#"
-        ><img class="avatar" src="http://i.pravatar.cc/103" alt=""
+        ><img class="avatar" src="http://i.pravatar.cc/103" alt="avatar"
       /></a>
       <a href="#"
-        ><img class="avatar" src="http://i.pravatar.cc/104" alt=""
+        ><img class="avatar" src="http://i.pravatar.cc/104" alt="avatar"
       /></a>
     </section>
   </body>
