update(#95): add table structure for food ratings and spice levels

--- a/095.Blur Table Rows Focus/index.html
+++ b/095.Blur Table Rows Focus/index.html
@@ -11,9 +11,34 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-  
+
 </head>
 <body>
-
+<table>
+  <thead>
+    <tr>
+      <th>Food</th>
+      <th>Rating</th>
+      <th>Spicy</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Bun Bo</td>
+      <td>5/5</td>
+      <td>🌶️🌶️</td>
+    </tr>
+    <tr>
+      <td>Banh Mi</td>
+      <td>4/5</td>
+      <td>(🌶️ depend)</td>
+    </tr>
+    <tr>
+      <td>Pho</td>
+      <td>4/5</td>
+      <td>(🌶️ depend)</td>
+    </tr>
+  </tbody>
+</table>
 </body>
 </html>
