style(#95): update background color and table borders for improved aesthetics

--- a/095.Table focus-within/index.html
+++ b/095.Table focus-within/index.html
@@ -1,44 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Day #095: Blur Table Rows Focus</title>
-  <link rel="stylesheet" href="style.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Day #095: Blur Table Rows Focus</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
-</head>
-<body>
-<table>
-  <thead>
-    <tr>
-      <th>Food</th>
-      <th>Rating</th>
-      <th>Spicy</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Bun Bo</td>
-      <td>5/5</td>
-      <td>🌶️🌶️</td>
-    </tr>
-    <tr>
-      <td>Banh Mi</td>
-      <td>4/5</td>
-      <td>(🌶️ depend)</td>
-    </tr>
-    <tr>
-      <td>Pho</td>
-      <td>4/5</td>
-      <td>(🌶️ depend)</td>
-    </tr>
-  </tbody>
-</table>
-</body>
+  </head>
+  <body>
+    <table>
+      <thead>
+        <tr>
+          <th>Food</th>
+          <th>Rating</th>
+          <th>Spicy</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Bun Bo</td>
+          <td><input type="text" value="5/5" /></td>
+          <td>🌶️🌶️</td>
+        </tr>
+        <tr>
+          <td>Banh Mi</td>
+          <td><input type="text" value="4/5" /></td>
+          <td>(🌶️ depend)</td>
+        </tr>
+        <tr>
+          <td>Pho</td>
+          <td><input type="text" value="4/5" /></td>
+          <td>(🌶️ depend)</td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
