--- a/095.Table focus-within/index.html
+++ b/095.Table focus-within/index.html
@@ -17,24 +17,24 @@
       <thead>
         <tr>
           <th>Food</th>
-          <th>Rating</th>
+          <th>Rating (1-5)</th>
           <th>Spicy</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>Bun Bo</td>
-          <td><input type="text" value="5/5" /></td>
+          <td><input type="text" value="Bún Bò" /></td>
+          <td><input type="tel" value="5" min="1" max="5" /></td>
           <td>🌶️🌶️</td>
         </tr>
         <tr>
-          <td>Banh Mi</td>
-          <td><input type="text" value="4/5" /></td>
+          <td><input type="text" value="Bánh Mì" /></td>
+          <td><input type="number" value="4" min="1" max="5" /></td>
           <td>(🌶️ depend)</td>
         </tr>
         <tr>
-          <td>Pho</td>
-          <td><input type="text" value="4/5" /></td>
+          <td><input type="text" value="Phở" /></td>
+          <td><input type="number" value="4" min="1" max="5" /></td>
           <td>(🌶️ depend)</td>
         </tr>
       </tbody>
