chores(#18): remove unclear example

--- a/018.Tooltip (abbr)/index.html
+++ b/018.Tooltip (abbr)/index.html
@@ -18,9 +18,7 @@
         <p>
           The markup language used to create the semantics and structure of a
           web page also known as
-          <dfn id="html"
-            ><abbr title="HyperText Markup Language">HTML</abbr> </dfn
-          >.
+          <dfn><abbr title="HyperText Markup Language">HTML</abbr> </dfndfn>.
         </p>
       </section>
     </main>
