update(#17): change text content in html, update style and docs in readme

--- a/017.System Badge (currentColor)/index.html
+++ b/017.System Badge (currentColor)/index.html
@@ -16,33 +16,33 @@
 		<main>
 			<section class="badge__section">
 				<section class="badge__variants">
-					<p class="badge badge--size-sm badge--color-primary">Label</p>
-					<p class="badge badge--size-md badge--color-primary">Label</p>
-					<p class="badge badge--size-lg badge--color-primary">Label</p>
+					<p class="badge badge--size-sm badge--color-primary">Primary</p>
+					<p class="badge badge--size-md badge--color-primary">Primary</p>
+					<p class="badge badge--size-lg badge--color-primary">Primary</p>
 				</section>
 
 				<section class="badge__variants">
-					<p class="badge badge--size-sm badge--color-danger">Label</p>
-					<p class="badge badge--size-md badge--color-danger">Label</p>
-					<p class="badge badge--size-lg badge--color-danger">Label</p>
+					<p class="badge badge--size-sm badge--color-danger">Danger</p>
+					<p class="badge badge--size-md badge--color-danger">Danger</p>
+					<p class="badge badge--size-lg badge--color-danger">Danger</p>
 				</section>
 
 				<section class="badge__variants">
-					<p class="badge badge--size-sm badge--color-warning">Label</p>
-					<p class="badge badge--size-md badge--color-warning">Label</p>
-					<p class="badge badge--size-lg badge--color-warning">Label</p>
+					<p class="badge badge--size-sm badge--color-warning">Warning</p>
+					<p class="badge badge--size-md badge--color-warning">Warning</p>
+					<p class="badge badge--size-lg badge--color-warning">Warning</p>
 				</section>
 
 				<section class="badge__variants">
-					<p class="badge badge--size-sm badge--color-success">Label</p>
-					<p class="badge badge--size-md badge--color-success">Label</p>
-					<p class="badge badge--size-lg badge--color-success">Label</p>
+					<p class="badge badge--size-sm badge--color-success">Success</p>
+					<p class="badge badge--size-md badge--color-success">Success</p>
+					<p class="badge badge--size-lg badge--color-success">Success</p>
 				</section>
 
 				<section class="badge__variants">
-					<p class="badge badge--size-sm badge--color-brand">Label</p>
-					<p class="badge badge--size-md badge--color-brand">Label</p>
-					<p class="badge badge--size-lg badge--color-brand">Label</p>
+					<p class="badge badge--size-sm badge--color-brand">Brand</p>
+					<p class="badge badge--size-md badge--color-brand">Brand</p>
+					<p class="badge badge--size-lg badge--color-brand">Brand</p>
 				</section>
 			</section>
 		</main>
