--- a/095.Table Focus-Within/index.html
+++ b/095.Table Focus-Within/index.html
@@ -24,7 +24,7 @@
       <tbody>
         <tr>
           <td><input type="text" value="Bún Bò" /></td>
-          <td><input type="tel" value="5" min="1" max="5" /></td>
+          <td><input type="number" value="5" min="1" max="5" /></td>
           <td>🌶️🌶️</td>
         </tr>
         <tr>
